fix issue with dropdowns on smaller screens

--- a/ui/src/components/basic/CustomDropDown/CustomDropDown.module.scss
+++ b/ui/src/components/basic/CustomDropDown/CustomDropDown.module.scss
@@ -99,8 +99,6 @@
     }
     .list-items {
       z-index: 9;
-      display: flex;
-      flex-direction: column;
       top: 100%;
       left: 0;
       right: 0;
